// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note Modal getTitleStyling should retrun error style if title is empty 1`] = `
Array [
  Object {
    "borderBottomWidth": 1,
    "borderColor": "#808080",
    "color": "#212121",
    "fontSize": 17.5,
    "height": 40,
  },
  Object {
    "borderColor": "#d50000",
  },
]
`;

exports[`Note Modal getTitleStyling should return simple style if title is filled 1`] = `
Object {
  "borderBottomWidth": 1,
  "borderColor": "#808080",
  "color": "#212121",
  "fontSize": 17.5,
  "height": 40,
}
`;

exports[`Note Modal should render properly 1`] = `
<Component
  animationType="none"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  supportedOrientations={
    Array [
      "portrait",
      "landscape",
    ]
  }
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderRadius": 4,
          "elevation": 6,
          "padding": 20,
          "width": "100%",
        }
      }
    >
      <ScrollView
        style={
          Object {
            "flexGrow": 0,
            "marginBottom": 20,
            "marginTop": 5,
          }
        }
      >
        <ControlledColorPicker
          color="#c0392b"
          onColorChange={[Function]}
          setColor={[MockFunction]}
        />
        <TextInput
          allowFontScaling={true}
          onChangeText={[Function]}
          placeholder="Title"
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#808080",
              "color": "#212121",
              "fontSize": 17.5,
              "height": 40,
            }
          }
          underlineColorAndroid="transparent"
          value="First Note"
        />
        <TextInput
          allowFontScaling={true}
          defaultValue="Important Note"
          multiline={true}
          onChangeText={[Function]}
          placeholder="Note"
          style={
            Object {
              "color": "#212121",
              "fontSize": 17.5,
            }
          }
          underlineColorAndroid="transparent"
        />
      </ScrollView>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-around",
          }
        }
      >
        <Button
          onPress={[Function]}
          title="Cancel"
        />
        <Button
          disabled={false}
          onPress={[Function]}
          title="Save"
        />
      </View>
    </View>
  </View>
</Component>
`;
